<resources>
    <string name="app_name">Event Finder</string>
    <string name="sign_up">Sign Up</string>
    <string name="event_finder">Event Finder</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="zip_code">Zip Code</string>
    <string name="name">Name</string>
    <string name="new_to_event_finder">New to Event Finder?</string>
    <string name="join_a_community_of_event_seekers">Join a community of event seekers!</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">events</string>
    <string name="to">to</string>
    <string name="event_dates">Event Dates:</string>
    <string name="cost">Cost: </string>
    <string name="location">Location:</string>
    <string name="event_site">Event Site:</string>
    <string name="todo">TODO</string>
    <string name="photo_album">Photo Album</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_your_caption_here">Add your caption here!</string>
    <string name="submit">Submit</string>
    <string name="image">TODO</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="event_photo">event photo</string>
    <string name="short_bio">Short Bio</string>
    <string name="select_favorite_event_categories">Select favorite event categories</string>
    <string name="bio_here">Bio here</string>
    <string name="interest_categories">Interests:</string>
    <string name="example_categories">lectures-books, fashion</string>
    <string name="events_for_you">Events for you</string>
    <string name="recommendations_curated_just_for_you">Recommendations curated just for you!</string>
    <string name="error_image">Error image</string>
    <string name="oops_there_are_no_events_near_you">Oops.. there are no events near you</string>
    <string name="try_a_different_zip_code">Try a different zip code!</string>
    <string name="select_profile_photo">Select profile photo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="logo">logo</string>
    <string name="photo_of_event">Photo of event</string>
    <string name="poster_profile_image">Poster profile image</string>
    <string name="posted_by">Posted by</string>
    <string name="category">category</string>
    <string name="make_my_bookmarks_private_to_other_users">Make my bookmarks private to other users</string>
    <string name="privacy">private</string>
    <string name="privacy_message">User\'s bookmarks on private mode</string>

</resources>