<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feed"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/explore"
        app:showAsAction="ifRoom"
        />
</menu>