<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.capstone.event_finder.activities.MainActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        tools:layout_editor_absoluteX="16dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginStart="140dp"
        android:layout_marginTop="39dp"
        android:text="@string/login"
        app:flow_firstHorizontalBias="10"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:layout_editor_absoluteX="145dp" />

    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginStart="116dp"
        android:layout_marginTop="61dp"
        android:text="@string/new_to_event_finder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:text="New to Event Finder?" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelcomeMessage"
        android:layout_marginStart="140dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/gradient"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="365dp"
        android:layout_height="105dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@mipmap/ic_logo_round"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@mipmap/ic_logo_round" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_marginStart="105dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_finder"
        android:textSize="30sp" />

</RelativeLayout>
