<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginStart="60dp"
        android:layout_marginTop="23dp"
        android:text="@string/add_photo" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="354dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:contentDescription="@string/image"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_your_caption_here"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/btnCaptureImage"
        android:text="@string/submit" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSubmit"
        android:layout_marginStart="165dp"
        android:layout_marginTop="15dp"
        android:visibility="invisible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animatedPortal"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/etDescription"
        android:layout_marginBottom="20dp"
        app:lottie_rawRes="@raw/teleport_animation" />


</RelativeLayout>